                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 22-04-2005 added: audioscrobbler now saves a cache if no server is available or connection failed
  - 22-04-2005 fixed: audioscrobbler tried to submit songs, before the initial handshake with the server succeeds
  - 19-04-2005 changed: increased thumb cache to 64K thumbs (from 4K)
                        thumbs will need to be recreated or use tools/UpdateThumbs.py from the scripts dialog to update your old thumb cache
  - 19-04-2005 fixed: create thumbs in my pictures now skips files that already have thumbs
  - 19-04-2005 changed: settings where 0 indicates off show "Off" as text now
  - 19-04-2005 fixed: audioscrobbler status notification is shown every 30 sec. if no network connection available
  - 19-04-2005 updated: Spanish language file (Thnx to jose_t)
  - 19-04-2005 updated: German language file
  - 19-04-2005 updated: Polish language file (Thnx to napek)
  - 19-04-2005 updated: Norwegian language file (Thnx to vnm)
  - 19-04-2005 updated: Finnish language file (Thnx to jutski)
  - 18-04-2005 added: option to disable music visualisation (localized string instead of using disabled.vis)
  - 18-04-2005 added: Support for AC3/DTS passthrough for dvdplayer and partly fixed audiostream selection from dvdmenu.
  - 17-04-2005 fixed: PAPlayer seeking was way too fast.
  - 17-04-2005 fixed: Time display in VBR files after seeking is now more accurate.
  - 17-04-2005 fixed: .Cue sheet sort order in sort by files.
  - 17-04-2005 added: Better VBR seeking for PaPlayer.
  - 17-04-2005 fixed: AudioScrobbler submission on .cue sheet items was wrong.
  - 17-04-2005 changed: Skin version hits v1.3.